tests/fixtures/invalid/none_mod_none.py
# Cannot modulo None and None
x: None = None % None
